Ch 8 Practice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice
-d
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java
<---- end of javadoc command ---->
Loading source file C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java...
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java:3: error: class, interface, or enum expected
{
^
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java:5: error: class, interface, or enum expected
public void mousePressed(MouseEvent event)
       ^
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java:8: error: class, interface, or enum expected
int y = event.getY();
^
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java:9: error: class, interface, or enum expected
clickNum++;
^
C:\Users\afu\Desktop\GitHub\unit7ObjectOrientedDesign\Ch 8 Practice\MouseClickListener.java:10: error: class, interface, or enum expected
if (clickNum == 1)
^
5 errors
